--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "nodemon": "^3.1.7"
   },
@@ -7,8 +8,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "vercel-build": "prisma generate"
   },
   "keywords": [],
   "author": "",
