--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "nodemon": "^3.1.7"
@@ -15,5 +16,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "prisma": "^6.0.1"
+  }
 }
