--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1"
   },
   "name": "sijaga-be",
   "version": "1.0.0",
