--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "index.js" }
-    ],
-    "rewrites": [
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.js"
+    },
     {
       "source": "/socket.io",
       "destination": "/"
@@ -28,4 +29,3 @@
     }
   ]
 }
-  
