--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     },
     {
       "source": "/socket.io",
-      "destination": "/"
+      "destination": "/socket.js"
     }
   ],
   "headers": [
