--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,15 @@
     {
       "source": "/(.*)",
       "destination": "/index.js"
+    },
+    {
+      "source": "/socket.io",
+      "destination": "/socket.js"
     }
   ],
   "headers": [
     {
-      "source": "/socket.io/(.*)",
+      "source": "/socket.io",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
@@ -20,18 +24,6 @@
         {
           "key": "Access-Control-Allow-Methods",
           "value": "GET,POST,OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
-        },
-        {
-          "key": "Connection",
-          "value": "Upgrade"
-        },
-        {
-          "key": "Upgrade",
-          "value": "websocket"
         }
       ]
     }
