--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    { "src": "index.js", "use": "@vercel/node" },
+    { "src": "socket.js", "use": "@vercel/node" }
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.js"
-    },
-    {
       "source": "/socket.io",
       "destination": "/socket.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.js"
     }
   ],
   "headers": [
@@ -24,6 +25,14 @@
         {
           "key": "Access-Control-Allow-Methods",
           "value": "GET,POST,OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
         }
       ]
     }
